added second connector via rsa
cache cleanup jobs

Signed-off-by: Ilenia Salvadori <i.salvadori@data-in-motion.biz>